New Problems on Multithreading